src/test/ui/issues/issue-69725.stderr
error[E0599]: no method named `clone` found for struct `issue_69725::Struct<A>` in the current scope
  --> $DIR/issue-69725.rs:7:32
   |
LL |     let _ = Struct::<A>::new().clone();
   |                                ^^^^^ method not found in `issue_69725::Struct<A>`
   | 
  ::: $DIR/auxiliary/issue-69725.rs:2:1
   |
LL | pub struct Struct<A>(A);
   | ------------------------ doesn't satisfy `issue_69725::Struct<A>: std::clone::Clone`
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `A: std::clone::Clone`
           which is required by `issue_69725::Struct<A>: std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
